--- a/index.html
+++ b/index.html
@@ -44,4 +44,16 @@
     </div>
     <script src="theme-toggle.js"></script>
 </body>
-</html>
+</html>  
+
+  <section id="about">
+            <h2>Sobre</h2>
+            <p>Seja bem vindo ao EL CHAVO,
+                 Aqui vendemos refrescos é
+                  ensinamos receitas, esse
+                   site foi criado para
+                    expandir a companhia
+                     CHAVO para todas as
+                      famílias conhecerem
+                       os melhores refrescos
+                        do mercado.</p>
