--- a/index.html
+++ b/index.html
@@ -50,10 +50,4 @@
             <h2>Sobre</h2>
             <p>Seja bem vindo ao EL CHAVO,
                  Aqui vendemos refrescos é
-                  ensinamos receitas, esse
-                   site foi criado para
-                    expandir a companhia
-                     CHAVO para todas as
-                      famílias conhecerem
-                       os melhores refrescos
-                        do mercado.</p>
+                  ensinamos receitas.</p>
