--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHAVO refrescos</title>
-    <link id="theme-stylesheet" rel="stylesheet" href="light-theme.css">
+    <title>Projeto GL</title>
     <style>
-        /* Estilos adicionais para o layout básico */
         body {
             font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
         }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
+        header {
+            background-color: #333;
+            color: #fff;
             text-align: center;
-            padding: 20px;
+            padding: 1rem;
         }
         h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
+            font-size: 2rem;
         }
-        p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-        #toggle-theme {
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 1em;
+        main {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+            background-color: #fff;
             border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>EL CHAVO</h1>
-        <p>Barraca de refrescos de CHAVO</p>
-        <button id="toggle-theme">Mudar Tema</button>
-    </div>
-    <script src="theme-toggle.js"></script>
-</body>
-</html>  
+    <header>
+        <h1>El Chavo</h1>
+        <p>Os melhores sucos do país</p>
+    </header>
+    <main>
+        <h2>O que são?</h2>
+        <p> Os sucos El chavo são sucos que encantam as pessoas com seu sabor suculento e seu jeito estranho de experimentar, adoramos brincar com a mente das pessoas com brincadeiras e jogos com os sucos.</p>
+        <h2>Vendemos sucos para todo Brasil!</h2>
+        
+        <h2>Aqui estão os exemplos dos sucos:"</h2>
 
-  <section id="about">
-            <h2>Sobre</h2>
-            <p>Seja bem vindo ao EL CHAVO,
-                 Aqui vendemos refrescos é
-                  ensinamos receitas.</p>
+            <p> suco de tamarino com sabor de laranja: RS 9,99</p>
+               <p> suco de laranja com sabor de limão: RS 9,99</p>
+                <p>suco de limão com sabor de tamarino: RS 9,99</p>
+    </main>
+    <footer>
+        © 2024 El Chavo Sucos
+    </footer>
+</body>
+</html>
