--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>suco de limão com sabor de tamarino: RS 9,99</p>
     </main>
     <footer>
-        © 2024 El Chavo Sucos
+        Kauã V. / Gabriel H.
     </footer>
 </body>
 </html>
