--- a/index.html
+++ b/index.html
@@ -1,59 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto GL</title>
+    <title>EL CHAVO REFRESCOS</title>
+    <link id="theme-stylesheet" rel="stylesheet" href="light-theme.css>";
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
             margin: 0;
-            padding: 0;
+            font-family: Arial, sans-serif;
         }
-        header {
-            background-color: #333;
-            color: #fff;
+        .container {
             text-align: center;
-            padding: 1rem;
+            padding: 50px;
         }
         h1 {
-            font-size: 2rem;
+            margin: 0;
+            font-size: 2em;
         }
-        main {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            background-color: #fff;
+        p {
+            font-size: 1.2em;
+        }
+        #toggle-theme {
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            font-size: 1em;
             border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #333;
-            color: #fff;
+            transition: background-color 0.3s, color 0.3s;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>El Chavo</h1>
-        <p>Os melhores sucos do país</p>
-    </header>
-    <main>
-        <h2>O que são?</h2>
-        <p> Os sucos El chavo são sucos que encantam as pessoas com seu sabor suculento e seu jeito estranho de experimentar, adoramos brincar com a mente das pessoas com brincadeiras e jogos com os sucos.</p>
-        <h2>Vendemos sucos para todo Brasil!</h2>
-        
-        <h2>Aqui estão os exemplos dos sucos:"</h2>
-
-            <p> suco de tamarino com sabor de laranja: RS 9,99</p>
-               <p> suco de laranja com sabor de limão: RS 9,99</p>
-                <p>suco de limão com sabor de tamarino: RS 9,99</p>
-    </main>
-    <footer>
-        Kauã V. / Gabriel H.
-    </footer>
+    <div class="container">
+        <h1>EL CHAVO COMPANY</h1>
+        <p>REFRESCOS DA VILA CHAVO</p>
+        <button id="toggle-theme">Mudar Tema</button>
+    </div>
+    <script src="theme-toggle.js"></script>
 </body>
 </html>
