--- a/index.html
+++ b/index.html
@@ -3,40 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EL CHAVO REFRESCOS</title>
-    <link id="theme-stylesheet" rel="stylesheet" href="light-theme.css>";
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            margin: 0;
-            font-size: 2em;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        #toggle-theme {
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 1em;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-    </style>
+    <title>El Chavo - Venda de Sucos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>EL CHAVO COMPANY</h1>
-        <p>REFRESCOS DA VILA CHAVO</p>
-        <button id="toggle-theme">Mudar Tema</button>
-    </div>
-    <script src="theme-toggle.js"></script>
+    <header id="home">
+        <h1>El Chavo - Venda de Sucos</h1>
+        <p>Os melhores sucos naturais da região!</p>
+    </header>
+    <nav>
+        <div class="menu-hamburguer">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul class="menu-cascata">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li class="menu-sucos"><a href="#">Sucos</a>
+                <ul>
+                    <li><a href="#suco-tamarindo">Suco de Tamarindo</a></li>
+                    <li><a href="#suco-laranja">Suco de Laranja</a></li>
+                    <li><a href="#suco-limao">Suco de Limão</a></li>
+                </ul>
+            </li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="sucos">
+            <h2>Nossos Sucos</h2>
+            <article id="suco-tamarindo">
+                <h3>Suco de Tamarindo</h3>
+                <img src="https://via.placeholder.com/150" alt="Suco de Tamarindo">
+                <p>O suco de tamarindo é uma bebida refrescante e levemente ácida, perfeita para os dias quentes. Rico em vitaminas e minerais, ele ajuda na digestão e fortalece o sistema imunológico. E, como no seriado Chaves, ele tem gosto de limão!</p>
+            </article>
+            <article id="suco-laranja">
+                <h3>Suco de Laranja</h3>
+                <img src="https://via.placeholder.com/150" alt="Suco de Laranja">
+                <p>O suco de laranja é um clássico, conhecido por seu sabor cítrico e refrescante. É uma excelente fonte de vitamina C, ajudando a fortalecer o sistema imunológico e a prevenir resfriados. Mas aqui na El Chavo, ele tem gosto de tamarindo!</p>
+            </article>
+            <article id="suco-limao">
+                <h3>Suco de Limão</h3>
+                <img src="https://via.placeholder.com/150" alt="Suco de Limão">
+                <p>O suco de limão é uma bebida versátil e refrescante, rica em vitamina C e antioxidantes. Ele ajuda a desintoxicar o corpo, melhorar a digestão e fortalecer o sistema imunológico. E, para completar a brincadeira, ele tem gosto de laranja!</p>
+            </article>
+        </section>
+        <section id="sobre">
+            <h2>Sobre a Empresa</h2>
+            <p>Na El Chavo, nos dedicamos a oferecer sucos naturais de alta qualidade, feitos com frutas frescas e selecionadas. Nossa missão é proporcionar uma experiência saudável e saborosa para nossos clientes, promovendo o bem-estar e a saúde.</p>
+        </section>
+        <section>
+            <h2>Tabela de Preços</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Suco</th>
+                        <th>Preço (R$)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Suco de Morango</td>
+                        <td>8,00</td>
+                    </tr>
+                    <tr>
+                        <td>Suco de Tamarindo</td>
+                        <td>10,00</td>
+                    </tr>
+                    <tr>
+                        <td>Suco de Limão</td>
+                        <td>7,00</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+    <footer id="contato">
+        <p>© Gabriel H. - Kauã V.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
