--- a/index.html
+++ b/index.html
@@ -13,16 +13,11 @@
         <p>Os melhores sucos naturais da região!</p>
     </header>
     <nav>
-        <div class="menu-hamburguer">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <ul class="menu-cascata">
+        <ul class="menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#sobre">Sobre</a></li>
             <li class="menu-sucos"><a href="#">Sucos</a>
-                <ul>
+                <ul class="submenu">
                     <li><a href="#suco-tamarindo">Suco de Tamarindo</a></li>
                     <li><a href="#suco-laranja">Suco de Laranja</a></li>
                     <li><a href="#suco-limao">Suco de Limão</a></li>
@@ -34,25 +29,27 @@
     <main>
         <section id="sucos">
             <h2>Nossos Sucos</h2>
-            <article id="suco-tamarindo">
-                <h3>Suco de Tamarindo</h3>
-                <img src="https://via.placeholder.com/150" alt="Suco de Tamarindo">
-                <p>O suco de tamarindo é uma bebida refrescante e levemente ácida, perfeita para os dias quentes. Rico em vitaminas e minerais, ele ajuda na digestão e fortalece o sistema imunológico. E, como no seriado Chaves, ele tem gosto de limão!</p>
-            </article>
-            <article id="suco-laranja">
-                <h3>Suco de Laranja</h3>
-                <img src="https://via.placeholder.com/150" alt="Suco de Laranja">
-                <p>O suco de laranja é um clássico, conhecido por seu sabor cítrico e refrescante. É uma excelente fonte de vitamina C, ajudando a fortalecer o sistema imunológico e a prevenir resfriados. Mas aqui na El Chavo, ele tem gosto de tamarindo!</p>
-            </article>
-            <article id="suco-limao">
-                <h3>Suco de Limão</h3>
-                <img src="https://via.placeholder.com/150" alt="Suco de Limão">
-                <p>O suco de limão é uma bebida versátil e refrescante, rica em vitamina C e antioxidantes. Ele ajuda a desintoxicar o corpo, melhorar a digestão e fortalecer o sistema imunológico. E, para completar a brincadeira, ele tem gosto de laranja!</p>
-            </article>
+            <div class="sucos-container">
+                <article id="suco-tamarindo">
+                    <h3>Suco de Tamarindo</h3>
+                    <img src="https://via.placeholder.com/150" alt="Suco de Tamarindo">
+                    <p>O suco de tamarindo é uma bebida refrescante e levemente ácida, perfeita para os dias quentes. Rico em vitaminas e minerais, ele ajuda na digestão e fortalece o sistema imunológico.</p>
+                </article>
+                <article id="suco-laranja">
+                    <h3>Suco de Laranja</h3>
+                    <img src="https://via.placeholder.com/150" alt="Suco de Laranja">
+                    <p>O suco de laranja é um clássico, conhecido por seu sabor cítrico e refrescante. É uma excelente fonte de vitamina C, ajudando a fortalecer o sistema imunológico.</p>
+                </article>
+                <article id="suco-limao">
+                    <h3>Suco de Limão</h3>
+                    <img src="https://via.placeholder.com/150" alt="Suco de Limão">
+                    <p>O suco de limão é uma bebida versátil e refrescante, rica em vitamina C e antioxidantes. Ele ajuda a desintoxicar o corpo e melhorar a digestão.</p>
+                </article>
+            </div>
         </section>
         <section id="sobre">
             <h2>Sobre a Empresa</h2>
-            <p>Na El Chavo, nos dedicamos a oferecer sucos naturais de alta qualidade, feitos com frutas frescas e selecionadas. Nossa missão é proporcionar uma experiência saudável e saborosa para nossos clientes, promovendo o bem-estar e a saúde.</p>
+            <p>Na El Chavo, nos dedicamos a oferecer sucos naturais de alta qualidade, feitos com frutas frescas e selecionadas. Nossa missão é proporcionar uma experiência saudável e saborosa para nossos clientes.</p>
         </section>
         <section>
             <h2>Tabela de Preços</h2>
