--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="styles.css"media="screen" />
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Chavo - Venda de Sucos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
 </head>
 <body>
     <header id="home">
@@ -32,17 +31,17 @@
             <div class="sucos-container">
                 <article id="suco-tamarindo">
                     <h3>Suco de Tamarindo</h3>
-                    <img src="https://via.placeholder.com/150" alt="Suco de Tamarindo">
+                    <img src="https://via.placeholder.com/150" alt="Imagem do Suco de Tamarindo">
                     <p>O suco de tamarindo é uma bebida refrescante e levemente ácida, perfeita para os dias quentes. Rico em vitaminas e minerais, ele ajuda na digestão e fortalece o sistema imunológico.</p>
                 </article>
                 <article id="suco-laranja">
                     <h3>Suco de Laranja</h3>
-                    <img src="https://via.placeholder.com/150" alt="Suco de Laranja">
+                    <img src="https://via.placeholder.com/150" alt="Imagem do Suco de Laranja">
                     <p>O suco de laranja é um clássico, conhecido por seu sabor cítrico e refrescante. É uma excelente fonte de vitamina C, ajudando a fortalecer o sistema imunológico.</p>
                 </article>
                 <article id="suco-limao">
                     <h3>Suco de Limão</h3>
-                    <img src="https://via.placeholder.com/150" alt="Suco de Limão">
+                    <img src="https://via.placeholder.com/150" alt="Imagem do Suco de Limão">
                     <p>O suco de limão é uma bebida versátil e refrescante, rica em vitamina C e antioxidantes. Ele ajuda a desintoxicar o corpo e melhorar a digestão.</p>
                 </article>
             </div>
